--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -1,53 +1,54 @@
 {
     "intro": [
-        "Every day is the same",
-        "I wake up at home, exactly at 8:15",
+        "Every day is the same.",
+        "I wake up at home, exactly at 8:15.",
 		"I get ready to go.",
 		"I eat a bowl of oatmeal for breakfast.\nThe oatmeal is like my life:\nbeige, bland, and boring.",
-        "And then I take the bus to work"
+        "And then I take the bus to work."
     ],
 	"bus": [
 		"The bus is always late.",
 		"It's sprinkling lightly.\nI hope the bus seats won't be damp."
 	],
 	"boss": [
-		"My boss says good morning,\nthen assigns me work for the day",
-		"Recently I've been manually\nentering data into spreadsheets",
-		"I glace out the window,\n toward the small park off to the right.\nDespite working here for 4 years,\n I've never once gone to that park.",
+		"My boss says good morning,\nthen assigns me work for the day.",
+		"Recently I've been manually\nentering data into spreadsheets.",
+		"I glace out the window,\ntoward the small park off to the right.\nDespite working here for 4 years,\n I've never once gone to that park.",
 		"I sigh and get back to my work.\nThe day drags by...",
 		"...",
 		"...",
-		"but eventually I'm done.",
-		"Time to go home (to the left)"
+		"But eventually I'm done.",
+		"Time to go home. (To the left)"
 	],
 	"water": [
-		"After a long day\nI'm ready to sleep.",
-		"Rain continues falling outside\ngently lulling me to sleep",
-		"I slowly fall into slumber,\n and begin to dream."
+		"After a long day\nI'm ready to go to bed.",
+		"Rain continues falling outside\ngently lulling me to sleep.",
+		"I slowly fall into slumber,\nand begin to dream."
 	],
 	"waterAlarm": [
 		"My alarm clock begins to ring\nwaking me from my strange dream.",
-		"Time to go to work"
+		"Time to go to work..."
 	],
 	"bus2": [
-		"As I get on the bus,\nI notice a woman and\n her child sitting in front of me",
-		"The child appears\n to be talking to an\n imaginary friend named Barth",
-		"It reminds me of how imaginative\n I used to be as a child.\nOne of my favorite games involved\npretending that the floor had turned into lava",
-		"Of course,\nif you touched the floor,\nyou would 'die'",
+		"As I get on the bus,\nI notice a woman and\n her child sitting in front of me.",
+		"The child appears\n to be talking to an\nimaginary friend named Barth.",
+		"It reminds me of how imaginative\n I used to be as a child.",
+		"One of my favorite games involved\npretending that the floor had turned into lava.",
+		"Of course,\nif you touched the floor,\nyou would 'die'.",
 		"But now, my life is so mundane and dull.\nI can't think of the last time\nI imagined anything."
 	],
 	"boss2": [
-		"My boss says good morning,\nthen assigns me work for the day",
-		"Once again, I'm manually\nentering data into spreadsheets",
+		"My boss says good morning,\nthen assigns me work for the day.",
+		"Once again, I'm manually\nentering data into spreadsheets.",
 		"For a moment, I think of the\ninnocence of my childhood.\nBut of course, nothing innocent can ever last.",
 		"I sigh and get back to my work.\nThe day drags by...",
 		"...",
 		"...",
-		"but eventually I'm done.",
-		"Time to go home (to the left)"
+		"But eventually I'm done.",
+		"Time to go home. (To the left)"
 	],
 	"lava": [
-		"Once again, I drift off into dreamland",
-		"As I slip away,\nI think once more about\n the imaginative child I used to be"
+		"Once again, I drift off into dreamland.",
+		"As I slip away,\nI think once more about\nthe imaginative child I used to be."
 	]
 }
