--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -92,5 +92,8 @@
 		"The world seems wide open\nand full of possibilities.",
 		"I gather up my resolve,\nstart looking for a new job...",
 		"and I set off into the future\nwith nothing but my hopes and dreams."
+	],
+	"end": [
+		"The End..."
 	]
 }
